@@ -732,64 +732,4 @@ class PyDO(dict):
             sql.append(conn.orderByString(order, limit, offset))                
         return ''.join(sql), vals
 
-
-def arrayfetch(objs, *args, **fieldData):
-    """
-    An experimental function that returns several an array of PyDO objects.
-    objs is a list of PyDO objects, or (PyDOObj, tableAlias) tuples (may be
-    intermingled).  *args are like the arguments passed to getSome().
-    
-    N.B.  This function is deprecated and will be removed in future.
-    """
-    order=fieldData.pop('order', None)
-    limit=fieldData.pop('limit', None)
-    offset=fieldData.pop('offset', None)
-    qobjs=[]
-    for o in objs:
-        if isinstance(o, (tuple, list)) and len(o)==2:
-            qobjs.append(o)
-        else:
-            qobjs.append((o, o.getTable()))
-    objs=[x[0] for x in qobjs]
-    # connectionAlias must be the same for all objects
-    caliases=tuple(frozenset(o.connectionAlias for o in objs))
-    if len(caliases)!=1:
-        raise ValueError, \
-              "objects passed to join must have same connection alias"
-    dbi=objs[0].getDBI()
-    sql, values=PyDO._processWhere(dbi, args, fieldData)
-    allcols=[o.getColumns(a) for o, a in qobjs]
-    cols=', '.join(', '.join(a) for a in allcols)
-    tables=', '.join(formatTexp(o, a) for o, a in qobjs)
-    select=["SELECT %s FROM %s" % (cols, tables)]
-    if sql:
-        select.append(" WHERE ")
-        select.append(sql)
-    if filter(None, (order, limit, offset)):
-        select.append(dbi.orderByString(order, limit, offset))
-    result=dbi.execute(''.join(select), values, True)
-    if not result:
-        return ()
-    ret=[]
-    for row in result:
-        retrow=[]
-        for o, cols in izip(objs, allcols):
-            d=dict((_strip_tablename(c), row[c]) for c in cols)
-            # if all values are NULL, take that as meaning that this
-            # is a full join and the whole object is NULL, and append
-            # None
-            for v in d.itervalues():
-                if v is not None:
-                    notnull=True
-                    break
-            else:
-                notnull=False
-            if notnull:
-                retrow.append(o(**d))
-            else:
-                retrow.append(None)
-        ret.append(tuple(retrow))
-    return tuple(ret)
-            
-
 __all__=['PyDO']
